--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "paths": {
+      "@env/*": [
+        "src/environments/*"
+      ],
       "@core/*" :[
         "src/app/core/*"
       ],
